educational qualifications and fresher qualifications completed

--- a/src/app/user-registration/user-registration.component.html
+++ b/src/app/user-registration/user-registration.component.html
@@ -31,4 +31,5 @@
     </div>
 </div>
 
-<app-personal-information></app-personal-information>
+<!-- <app-personal-information></app-personal-information> -->
+<app-qualifications></app-qualifications>
