--- a/src/app/qualifications/qualifications.component.scss
+++ b/src/app/qualifications/qualifications.component.scss
@@ -1,9 +1,44 @@
 @import "../../scss/variables";
 @import "../../scss/mixins";
 
+label{
+    font-size: $xsmall-font+px;
+    color: $sixth-color;
+}
+input[type='text'],[type='number'],select,[type='date']{
+    padding: 0;
+    font-size: 16px;
+    border: none;
+    outline: none;
+    font-size: 16px;
+    color: #000;
+    margin-top: 12px;
+    font-family: quicksand;
+    font-weight: 600;
+    width: 180px;
+    border-bottom: 1px solid $border-38-color;
+    display: block;
+}
+input[type='radio']{
+    height: 24px;
+    width: 20px;
+    accent-color: $secondary-color;
+    margin: 0;
+}
+input[type='checkbox']{
+    height: 24px;
+    width: 18px;
+    accent-color: $secondary-color;
+    margin: 0;
+}
+
 .educational__qualifications{
+    .educationalVisibility{
+        display: none;
+    }
     margin: 0px 24px;
     .educational__qualification__body{
+        
         background-color: $white-color;
         padding: 24px;
         border-radius: 2px;
@@ -11,24 +46,7 @@
             @include displayFlex(normal,normal); 
             flex-direction: column;
             gap:40px;
-            label{
-                font-size: $xsmall-font+px;
-                color: $sixth-color;
-            }
-            input[type='text'],[type='number'],select{
-                padding: 0;
-                font-size: 16px;
-                border: none;
-                outline: none;
-                font-size: 16px;
-                color: #000;
-                margin-top: 12px;
-                font-family: quicksand;
-                font-weight: 600;
-                width: 180px;
-                border-bottom: 1px solid $border-38-color;
-                display: block;
-            }
+            
             .qualification_and_stream,.college_and_other_name{
                 @include displayFlex(normal,normal);
                 gap:24px;
@@ -74,17 +92,7 @@
         background-color: $white-color;
         border-radius: 2px;
         padding: 24px;
-        label{
-            font-size: $xsmall-font+px;
-            color: $sixth-color;
-            
-        }
-        input[type='radio']{
-            height: 24px;
-            width: 20px;
-            accent-color: $secondary-color;
-            margin: 0;
-        }
+        
         .application__radio{
             margin-top: 16px;
             @include displayFlex(normal,center);
@@ -96,45 +104,21 @@
             }
         }
     }
-
+    .fresherVisibility{
+        display: none;
+    }
+    
     .fresher__application{
+        
         background-color: $white-color;
         margin-top: 8px;
         padding: 24px;
         border-radius: 2px;
-        label{
-            font-size: $xsmall-font+px;
-            color: $sixth-color;
-            
-        }
-        input[type='radio']{
-            height: 24px;
-            width: 20px;
-            accent-color: $secondary-color;
-            margin: 0;
-        }
+        
         input[type='text']{
-            padding: 0;
-            font-size: 16px;
-            border: none;
-            outline: none;
-            font-size: 16px;
-            color: #000;
-            margin-top: 12px;
-            font-family: quicksand;
-            font-weight: 600;
-            width: 180px;
-            border-bottom: 1px solid $border-38-color;
-            display: block;
             width: 452px;
         }
-        input[type='checkbox']{
-            height: 24px;
-            width: 18px;
-            accent-color: $secondary-color;
-            margin: 0;
-
-        }
+        
         .familiar__technologies{
             .input_familiar__technologies{
                 @include displayFlex(normal,normal);
@@ -165,4 +149,56 @@
             
         }
     }
+    .experiencedVisibility{
+        display: none;
+    }
+    .experienced__application{
+        background-color: $white-color;
+        padding: 24px;
+        margin-top: 8px;
+        @include displayFlex(normal,normal);
+        flex-direction: column;
+        gap: 40px;
+        .familiar__technologies,.exeperties__technologies{
+            input[type='text']{
+                width: 452px;
+            }
+            .input_familiar__technologies,.input_exeperties__technologies{
+                
+                @include displayFlex(normal,normal);
+                flex-direction: column;
+                margin-top: 16px;
+                gap: 16px;
+                >div{
+                    @include displayFlex(normal,center);
+                    gap: 9px;
+                }
+                margin-bottom: 16px;
+            }
+        }
+
+        .previously__applied,.notice__period{
+            input[type='text'],[type='date'],select{
+                width: 452px;
+                accent-color: $secondary-color;
+            }
+            .notice__period__info{
+                @include displayFlex(normal,normal);
+                gap: 24px;
+            }
+            .previously__applied__radio,.notice__period__radio{
+                margin-top: 16px;
+                @include displayFlex(normal,center);
+                gap: 24px;
+                >div{
+                    font-size: 16px;
+                    @include displayFlex(normal,center);
+                    gap: 8px;
+                }
+                margin-bottom: 17px;
+            }
+            
+        }
+    }
 }
+
