--- a/src/app/job-listing/job-listing.component.html
+++ b/src/app/job-listing/job-listing.component.html
@@ -30,7 +30,7 @@
                             
                             <span> {{role}} </span>
                             @if(job.job_roles.length>1 && $index<job.job_roles.length-1){
-                                <div class="splitter" [hidden]="screenWidth < 376"></div>
+                                <div class="splitter"></div>
                             }
                         </div>
                     }
