--- a/src/app/job-listing/job-listing.component.scss
+++ b/src/app/job-listing/job-listing.component.scss
@@ -132,6 +132,11 @@
                 .job__roles{
                     @include displayFlex(normal,normal);
                     flex-direction: column;
+                    .role{
+                        .splitter{
+                            display: none;
+                        }
+                    }
                 }
             }
         }
