--- a/src/app/user-registration/user-registration.component.html
+++ b/src/app/user-registration/user-registration.component.html
@@ -32,4 +32,5 @@
 </div>
 
 <!-- <app-personal-information></app-personal-information> -->
-<app-qualifications></app-qualifications>
+<!-- <app-qualifications></app-qualifications> -->
+<app-preview-profile></app-preview-profile>
