--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,30 +1,40 @@
 <div class="login__container">
-    <div class="login__card">
-        <h1>Log in</h1>
-        <div class="email__input">
-            <input type="text" placeholder="Email ID*" required>
-            <h3>FORGOT EMAIL ID?</h3>
-        </div>
-        <div class="password__input">
-            <div class="inp__password">
-                <input type={{passwordType}} placeholder="Password*" required>
-                <img  src="../../assets/icons/preview.svg" alt="preview icon" (click)="togglePassword()">
+    <form action="" [formGroup]="loginForm" (ngSubmit)="onSubmit()" >
+        <div class="login__card" >
+            <h1>Log in</h1>
+            <div class="email__input">
+                <input type="text" placeholder="Email ID*" formControlName="email" 
+                [class.invalid]="loginForm.get('email')?.invalid &&
+                                (loginForm.get('email')?.dirty ||
+                                loginForm.get('email')?.touched) || isSubmitted
+                ">
+                <h3>FORGOT EMAIL ID?</h3>
             </div>
-            
-            <h3>FORGOT PASSWORD?</h3>
-            
+            <div class="password__input">
+                <div class="inp__password">
+                    <input type={{passwordType}} placeholder="Password*" formControlName="password"
+                    [class.invalid]="loginForm.get('password')?.invalid &&
+                                (loginForm.get('password')?.dirty ||
+                                loginForm.get('password')?.touched) || isSubmitted
+                    ">
+                    <img  src="../../assets/icons/preview.svg" alt="preview icon" (click)="togglePassword()">
+                </div>
+                
+                <h3>FORGOT PASSWORD?</h3>
+                
+            </div>
+            <div class="rememberMe">
+                <input type="checkbox" name="rememberMe" id="rememberMe" formControlName="rememberMe"/> Remember Me
+            </div>
+            <div class="login__button">
+                <button href="">LOG IN</button>
+            </div>
+            <div class="register__user">
+                <p>Not registered yet?</p>
+                <a href="" [routerLink]="['/registration']">create an account</a>
+            </div>
         </div>
-        <div class="rememberMe">
-            <input type="checkbox" name="rememberMe" id="rememberMe" /> Remember Me
-        </div>
-        <div class="login__button">
-            <button href="">LOG IN</button>
-        </div>
-        <div class="register__user">
-            <p>Not registered yet?</p>
-            <a href="" [routerLink]="['/registration']">create an account</a>
-        </div>
-    </div>
+    </form>
     <div class="login__footer">
         <a href="#">About</a>
         <div class="splitter"></div>
