started form validation

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,6 +8,7 @@
                                 (loginForm.get('email')?.dirty ||
                                 loginForm.get('email')?.touched) || isSubmitted
                 ">
+                <!-- <span>hello</span> -->
                 <h3>FORGOT EMAIL ID?</h3>
             </div>
             <div class="password__input">
