--- a/src/app/preview-profile/preview-profile.component.html
+++ b/src/app/preview-profile/preview-profile.component.html
@@ -171,3 +171,7 @@
         </div>
     </div>
 </div>
+
+<div class="next__and__previous__btns">
+    <button (click)="this.parentComponent.moveToPreviousStep()">Previous</button>
+</div>
