--- a/src/app/qualifications/qualifications.component.html
+++ b/src/app/qualifications/qualifications.component.html
@@ -237,3 +237,13 @@
     </form>
     
 </div>
+
+<div class="next__and__previous__btns">
+    
+        <button (click)="this.parentComponent.moveToPreviousStep()">Previous</button>
+    
+    
+        <button (click)="this.parentComponent.moveToNextStep()">Next</button>
+    
+    
+</div>
