--- a/src/app/preview-profile/preview-profile.component.scss
+++ b/src/app/preview-profile/preview-profile.component.scss
@@ -165,3 +165,23 @@ label {
     }
 }
 
+.next__and__previous__btns{
+    margin: 8px 0;
+    @include displayFlex(center,center);
+    gap: 16px;
+    button{
+        background-color: $button-background-color;
+        align-items: center;
+        border: none;
+        width: 90px;
+        height: 28px;
+        text-decoration: none;
+        color: $primary-color;
+        font-family: quicksand;
+        font-weight: 600;
+        box-shadow: 0px 3px 5px #0000003D;
+        text-transform: uppercase;
+        border-radius: 2px;
+        cursor: pointer;
+    }
+}
