--- a/src/app/user-registration/user-registration.component.scss
+++ b/src/app/user-registration/user-registration.component.scss
@@ -1,6 +1,22 @@
 @import "../../scss/variables";
 @import "../../scss/mixins";
 
+button{
+    background-color: $button-background-color;
+    align-items: center;
+    border: none;
+    width: 90px;
+    height: 28px;
+    text-decoration: none;
+    color: $primary-color;
+    font-family: quicksand;
+    font-weight: 600;
+    box-shadow: 0px 3px 5px #0000003D;
+    text-transform: uppercase;
+    border-radius: 2px;
+    cursor: pointer;
+}
+
 .registration__header{
     height: 48px;
     background-color: $fourth-color;
@@ -23,20 +39,6 @@
     &__buttons{
         @include displayFlex(normal,normal);
         gap:$base-font+px ;
-        >button{
-            background-color: $button-background-color;
-            align-items: center;
-            border: none;
-            width: 90px;
-            height: 28px;
-            text-decoration: none;
-            color: $primary-color;
-            font-family: quicksand;
-            font-weight: 600;
-            box-shadow: 0px 3px 5px #0000003D;
-            text-transform: uppercase;
-            border-radius: 2px;
-        }
         .btn:disabled{
             background-color: $disable-button-background-color;
         }
@@ -59,12 +61,24 @@
         @include displayFlex(center, center);
         gap: 8px;
         .step_count{
-            background-color: $button-background-color;
+            background-color: #757575;
+            color: $white-color;
             width: 32px;
             height: 32px;
             @include displayFlex(center, center);
             border-radius: 50%;
             font-size: 16px;
         }
+        .already_completed{
+            background-color: $button-background-color;
+            color: black;
+        }
     }
+}
+
+.next__and__previous__btns{
+    margin: 8px 0;
+    @include displayFlex(center,center);
+    gap: 16px;
+    
 }
